# jv80

./: .gitignore  CMakeLists.txt  jv80.code-workspace  main.cpp
asm/: asm.py  opcodes.py
asm/split/: __init__.py
bitmap/: A.xbm  B.xbm  C.xbm  D.xbm  E.xbm  F.xbm  G.xbm  H.xbm  I.xbm  J.xbm  K.xbm  L.xbm  M.xbm  N.xbm  O.xbm  P.xbm  Q.xbm  R.xbm  S.xbm  T.xbm  U.xbm  V.xbm  W.xbm  X.xbm  Y.xbm  Z.xbm  bitmaps.py
include/: addressregister.h  alu.h  backplane.h  clock.h  component.h  controller.h  harness.h  iochannel.h  lines.h  memory.h  opcodes.h  realsystem.h  register.h  registers.h  system.h  systembus.h
src/: addressregister.cpp  clock.cpp  component.cpp  controller.cpp  dump_instructions.cpp  lines.cpp  memory.cpp  realsystem.cpp  register.cpp
src/cpu/: addressregister.cpp  alu.cpp  backplane.cpp  clock.cpp  component.cpp  controller.cpp  emu.cpp  iochannel.cpp  memory.cpp  microcode.inc  register.cpp  systembus.cpp  systembusview.cpp  terminal.cpp
src/gui/: blockcursorstyle.cpp  blockcursorstyle.h  commands.cpp  commands.h  componentview.cpp  componentview.h  cputhread.cpp  cputhread.h  mainwindow.cpp  mainwindow.h  memdump.cpp  memdump.h  qled.cpp  qled.h  systembusview.cpp  systembusview.h  terminal.cpp  terminal.h
src/include/: addressregister.h  backplane.h  clock.h  component.h  controller.h  memory.h  opcodes.h  register.h  registers.h  systembus.h
src/test/: addressregister.cpp  alu.cpp  arithmetic.cpp  clock.cpp  controller.cpp  controllertest.h  inout.cpp  io.cpp  jump.cpp  memory.cpp  pushfl.cpp  register.cpp  stack.cpp  swap.cpp  zzcontroller.cpp
test/: addressregister.cpp  memory.cpp  mocksystem.h  register.cpp
